Avoid creating new Boolean (Boolean.valueOf is better)